fix for diver overflow; large screen support

--- a/forbiddenisland.css
+++ b/forbiddenisland.css
@@ -243,10 +243,12 @@ html {
 }
 
 .player_area {
-    display: inline-block;
+    /* display: inline-block; */
+    display: block;
 	position: relative;
-    vertical-align: top;
-    width: 100%;
+    /* vertical-align: top; */
+    /* width: 100%; */
+    margin-left: 10px;
     /* width: 95%; */
     /* padding: 5px 0px 0px 10px; */
 }
@@ -323,18 +325,33 @@ html {
     display: inline-block;
 }
 
-#flood_card_area {
+#flood_deck {
     display: inline-block;
-    width: 100%;
-    margin-left: 157px;
+    position: relative;
+    vertical-align: top;
+}
+
+#flood_card_area {
+    display: inline-flex;
+    width: 80%;
+    /* margin-left: 157px; */
+    position: relative;
 }
 
 .flood_deck_area {
-    display: inline-block;
-    width: 100%;
+    display: block;
+    /* width: 100%; */
     /* width: 95%; */
-    height: 204.13px;
+    min-height: 204.13px;
     position: relative;
+    margin-left: 10px;
+}
+
+.flood_deck_area_lg_screen {
+    transform: rotate(90deg) translateY(0px) translateX(50px);
+    transform-origin: bottom left;
+    width: 920px;
+    margin-top: -260px;
 }
 
 .treasure_card {
@@ -342,18 +359,28 @@ html {
     display: inline-block;
 }
 
-#treasure_card_area {
+#treasure_deck {
     display: inline-block;
-    width: 100%;
-    margin-left: 157px;
+    position: relative;
+    vertical-align: top;
+}
+
+#treasure_card_area {
+    /* display: inline-block; */
+    display: inline-flex;
+    width: 80%;
+    /* margin-left: 157px; */
+    position: relative;
 }
 
 .treasure_deck_area {
-    display: inline-block;
+    /* display: inline-block; */
+    display: block;
     /* width: 95%; */
-    width: 100%;
+    /* width: 100%; */
     height: 204.13px;
     position: realtive;
+    margin-left: 10px;
 }
 
 .treasure_starting_area {
@@ -563,4 +590,28 @@ html {
 #difficulty_level {
     font-family: 'Times New Roman', Times, serif;
     font-size: 2.5rem;
+}
+
+@media screen and (min-width: 1920px) {
+
+    .player_area {
+        display: inline-block;
+        max-width: 48%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+
+    #flood_card_area {
+        width: 60%;
+    }
+
+    #treasure_card_area {
+        width: 60%;
+    }
+
+    .player_figure_area {
+        display: none;
+    }
+
 }
